samples/_failures_safe/1761171532_c2afa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1a311e9.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e1a311e9.c:162:5: error: expected expression at end of input
  162 |     graph->nodes[source].distance =
      |     ^~~~~
./samples/SAFE/__tmp_e1a311e9.c:162:5: error: expected declaration or statement at end of input
